Add Security and model User to Project

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=bookAPI;Username=postgres;Password=2359"
+  },
+  "JwtSettings": {
+    "Secret": "SecretSecurityCodeForCreateJwtToken",
+    "ExpiryMinutes": "20",
+    "Issuer": "localhost",
+    "Audience": "localhost"
   }
 }
